# suez-water-remote

./: .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/suez_water_remote/: __init__.py  alarm_labels.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py  statistics.py  strings.json
custom_components/suez_water_remote/api/: __init__.py  client.py  const.py  exceptions.py  locales.py  models.py  parsers.py
custom_components/suez_water_remote/translations/: cs.json  en.json
tests/: __init__.py  conftest.py  test_button.py  test_client.py  test_locales.py  test_parsers.py  test_sensor.py  test_statistics.py
tests/fixtures/: alarms.html  alarms_config.html  bilan_conso.html  comparatif_usage.html  conso_an.html  conso_jour.html  conso_mois.html  conso_mois_de.html  conso_mois_en.html  conso_mois_fr.html  conso_saison.html  courbe_mois.html  home.html  home_de.html  home_en.html  home_fr.html  index_jour.html  index_mois.html  login.html
